# egui-desktop-app-example

./: Cargo.toml  README.md  authors.toml
assets/: config.template.toml
src/: about_window.rs  achievements.rs  app.rs  main.rs  settings.rs
src/config/: config.rs  mod.rs
src/config/models/: game.rs  mod.rs
src/windows/: about.rs
