[package]
name = "egui-desktop-app-example"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Goldy <example@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/cloudy-org/egui-desktop-app-example/"
rust-version = "1.92"

[dependencies]
cirrus_egui = { path = "./cirrus/egui" }
cirrus_error = { path = "./cirrus/error" }
cirrus_config = { path = "./cirrus/config" }
cirrus_theming = { path = "./cirrus/theming" }

egui = "=0.33.2"
eframe = { version = "=0.33.2", features = ["default"] }
egui_extras = { version = "=0.33.2", features = ["all_loaders"]}
egui-notify = "0.21.0"

log = "0.4.27"
env_logger = "0.11.8"
clap_derive = "4.5.40"
clap = {version = "4.5.40", features = ["derive"]}
# Add more image formats that you would like egui to support.
image = { version = "0.25", features = ["jpeg"] }

serde = {version = "1.0", features = ["derive"]}
